--- a/tos.html
+++ b/tos.html
@@ -142,7 +142,7 @@
             <p>We may update this Privacy Policy from time to time. We will notify users of any significant changes.</p>
             
             <h3>7. Contact Us</h3>
-            <p>If you have any questions about this Privacy Policy, please contact us at contact@asteriamc.xyz.</p>
+            <p>If you have any questions about this Privacy Policy, please contact us at legal@asteriamc.xyz</p>
             
             <p>Last updated: 8/7/24</p>
         </div>
