--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://asteriamc.xyz/">
+    <meta property="og:title" content="AsteriaMC - Premium Vanilla Minecraft SMP Experience">
+    <meta property="og:description" content="Join Asteria for an exceptional Minecraft experience. Our carefully curated environment combines pure vanilla gameplay with subtle enhancements.">
+    <meta property="og:image" content="https://i.imgur.com/EkrNZ6t.png">
     <title>AsteriaMC - Premium Vanilla SMP Experience</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
