--- a/index.html
+++ b/index.html
@@ -174,6 +174,10 @@
                     <div class="testimonial">
                         <p>"The terrain is actually sick wtf?"</p>
                         <span class="author">- _airx_</span>
+                    <div class="testimonial">
+                        <p>"W server its so good at least its not Hellstars"</p>
+                        <span class="author">- HerbertTheWhise</span>
+                    </div>
                     </div>
                 </div>
                 <div class="social-links">
