--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     </div>
                     <div class="testimonial">
                         <p>"W server its so good at least its not Hellstars"</p>
-                        <span class="author">- HerbertTheWhise</span>
+                        <span class="author">- HerbertTheWise</span>
                     </div>
                 </div>
                 <div class="social-links">
