--- a/tos.html
+++ b/tos.html
@@ -103,7 +103,7 @@
             <p>AsteriaMC is not liable for any indirect, incidental, special, consequential or punitive damages.</p>
             
             <h3>8. Governing Law</h3>
-            <p>These terms shall be governed by and construed in accordance with the laws of [Your Jurisdiction].</p>
+            <p>These terms shall be governed by and construed in accordance with the laws of the State of Idaho, specifically as applicable in Bonner County.</p>
             
             <h3>9. Changes to Terms</h3>
             <p>We reserve the right to update these terms at any time. Continued use of the service constitutes acceptance of any changes.</p>
