--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     </div>
                 </div>
                 <div class="social-links">
-                    <a href="#" class="social-link"><i class="fab fa-discord"></i></a>
+                    <a href="https://discord.gg/v5Xjv5D9Pj" class="social-link"><i class="fab fa-discord"></i></a>
                 </div>
             </div>
         </section>
