--- a/tos.html
+++ b/tos.html
@@ -83,7 +83,7 @@
             <ul>
                 <li>Respect other players and staff members</li>
                 <li>Not use cheats, hacks, or exploits</li>
-                <li>Not engage in griefing or harassment</li>
+                <li>Not engage in harassment</li>
                 <li>Follow server rules as communicated by staff</li>
             </ul>
             
@@ -144,7 +144,7 @@
             <h3>7. Contact Us</h3>
             <p>If you have any questions about this Privacy Policy, please contact us at legal@asteriamc.xyz</p>
             
-            <p>Last updated: 8/7/24</p>
+            <p>Last updated: 8/8/24</p>
         </div>
     </main>
 
