--- a/index.html
+++ b/index.html
@@ -172,6 +172,10 @@
                         <span class="author">- ayvyr (Owner & Founder)</span>
                     </div>
                     <div class="testimonial">
+                        <p>"This server’s just home—cool builds, daily vibes, and good friends."</p>
+                        <span class="author">- Omnipresince (Server Moderation)</span>
+                    </div>
+                    <div class="testimonial">
                         <p>"The terrain is actually sick wtf?"</p>
                         <span class="author">- _airx_</span>
                     </div>
