--- a/tos.html
+++ b/tos.html
@@ -90,13 +90,13 @@
             <h3>3. Griefing Policy*1</h3>
             <p>AsteriaMC has specific rules regarding griefing to maintain a fair and enjoyable environment for all players:</p>
             <ul>
-                <li>Griefing when players are online is strictly prohibited.</li>
-                <li>Offline griefing is allowed, but limited to once per week per player or group.</li>
+                <li>Griefing when players are offline is strictly prohibited.</li>
+                <li>Online griefing is allowed, but limited to once per week per player or group.</li>
                 <li>Griefing should not be excessively annoying or toxic in nature.</li>
             </ul>
             <p>Violations of these rules will result in the following consequences:</p>
             <ul>
-                <li>Griefing when players are online: Temporary suspension, with a minimum 8-hour ban. The exact duration will be determined by staff.</li>
+                <li>Griefing when players are offline: Temporary suspension, with a minimum 8-hour ban. The exact duration will be determined by staff.</li>
                 <li>Excessive griefing (more than once per week): Minimum 2-day ban, subject to staff discretion and potential extension.</li>
             </ul>
             <p>AsteriaMC staff reserves the right to modify these penalties based on the severity and frequency of the offense.</p>
