--- a/index.html
+++ b/index.html
@@ -180,6 +180,10 @@
                         <span class="author">- _airx_</span>
                     </div>
                     <div class="testimonial">
+                        <p>"The spawn on this server is really nice, many bioms surronding the spawn, and the people here are really positive."</p>
+                        <span class="author">- 4everclover</span>
+                    </div>
+                    <div class="testimonial">
                         <p>"W server its so good at least its not Hellstars"</p>
                         <span class="author">- HerbertTheWise</span>
                     </div>
