--- a/index.html
+++ b/index.html
@@ -177,15 +177,19 @@
                     </div>
                     <div class="testimonial">
                         <p>"The terrain is actually sick wtf?"</p>
-                        <span class="author">- _airx_</span>
+                        <span class="author">- _airx_ (Server Support)</span>
                     </div>
                     <div class="testimonial">
                         <p>"The spawn on this server is really nice, many bioms surronding the spawn, and the people here are really positive."</p>
-                        <span class="author">- 4everclover</span>
+                        <span class="author">- 4everclover (Community Member)</span>
+                    </div>
+                    <div class="testimonial">
+                        <p>"The servers anticheat is amazing, I barley see any cheaters in the server trying to exploit it."</p>
+                        <span class="author">- Papachalo (Community Member)</span>
                     </div>
                     <div class="testimonial">
                         <p>"W server its so good at least its not Hellstars"</p>
-                        <span class="author">- HerbertTheWise</span>
+                        <span class="author">- HerbertTheWise (Server Support)</span>
                     </div>
                 </div>
                 <div class="social-links">
