--- a/index.html
+++ b/index.html
@@ -184,6 +184,10 @@
                         <span class="author">- 4everclover (Community Member)</span>
                     </div>
                     <div class="testimonial">
+                        <p>"This server has been so welcoming and hospitable theyres berely any drama and the people are so nice."</p>
+                        <span class="author">- Mennardheniliam (Community Member)</span>
+                    </div>
+                    <div class="testimonial">
                         <p>"The servers anticheat is amazing, I barley see any cheaters in the server trying to exploit it."</p>
                         <span class="author">- Papachalo (Community Member)</span>
                     </div>
